--- a/res/layout/episodes_list_item.xml
+++ b/res/layout/episodes_list_item.xml
@@ -13,16 +13,43 @@
         android:layout_alignParentLeft="true"
         android:scaleType="centerCrop"/>
 
+    <ImageView
+        android:id="@+id/statusPlaying"
+        android:contentDescription="@string/status_playing_label"
+        android:layout_width="@dimen/status_indicator_width"
+        android:layout_height="18dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
+        android:background="@color/status_playing"
+        android:gravity="center"
+        android:padding="2dp"
+        android:src="@drawable/av_play_dark"/>
+
+    <TextView
+        android:id="@+id/txtvPublished"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/imgvImage"
+        android:layout_toLeftOf="@id/statusPlaying"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="?android:attr/textColorTertiary"
+        android:textSize="@dimen/text_size_micro"/>
+
     <TextView
         android:id="@+id/txtvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/txtvPublished"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="2dp"
         android:layout_toRightOf="@id/imgvImage"
-        android:layout_alignParentRight="true"
+        android:layout_toLeftOf="@id/statusPlaying"
         android:ellipsize="end"
         android:lines="2"
         android:textColor="?android:attr/textColorPrimary"
@@ -35,17 +62,6 @@
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/imgvImage"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/txtvPublished"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="?android:attr/textColorSecondary"
-            android:textSize="@dimen/text_size_micro"/>
 
         <RelativeLayout
             android:id="@+id/bottom_bar"
@@ -72,16 +88,5 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/statusPlaying"
-        android:contentDescription="@string/status_playing_label"
-        android:layout_width="@dimen/status_indicator_width"
-        android:layout_height="18dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="8dp"
-        android:background="@color/status_playing"
-        android:gravity="center"
-        android:padding="2dp"
-        android:src="@drawable/av_play_dark"/>
+
 </RelativeLayout>
