--- a/res/layout/external_player_fragment.xml
+++ b/res/layout/external_player_fragment.xml
@@ -48,6 +48,7 @@
                         android:contentDescription="@string/cover_label"
                         android:layout_width="@dimen/external_player_height"
                         android:layout_height="@dimen/external_player_height"
+                        android:padding="4dp"
                         android:layout_alignParentLeft="true"
                         android:adjustViewBounds="true"
                         android:cropToPadding="true"
@@ -77,11 +78,6 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp"
-                android:background="#AAAAAA"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -98,6 +94,7 @@
                         android:contentDescription="@string/cover_label"
                         android:layout_width="@dimen/external_player_height"
                         android:layout_height="@dimen/external_player_height"
+                        android:padding="4dp"
                         android:layout_alignParentLeft="true"
                         android:adjustViewBounds="true"
                         android:cropToPadding="true"
@@ -113,25 +110,9 @@
                         android:layout_marginTop="8dp"
                         android:layout_toRightOf="@id/imgvCoverAnchored"
                         android:ellipsize="end"
-                        android:maxLines="1"
+                        android:maxLines="2"
                         android:textSize="18sp"
                         android:fontFamily="sans-serif-condensed"/>
-
-                    <TextView
-                        android:id="@+id/txtvStatusAnchored"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_below="@id/txtvTitleAnchored"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_toRightOf="@id/imgvCoverAnchored"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:textColor="?android:attr/textColorTertiary"
-                        android:textSize="@dimen/text_size_micro"/>
                 </RelativeLayout>
 
                 <ImageButton
