Fixed issue with SlidingUpPanel library

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="bottom"
+    android:gravity="bottom"
     app:collapsedHeight="@dimen/external_player_height">
 
     <FrameLayout
