--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -31,6 +31,7 @@
     <attr name="borderless_button" format="reference"/>
     <attr name="spinner_button" format="reference"/>
     <attr name="overlay_drawable" format="reference"/>
+    <attr name="sleeptimer_drawable" format="reference"/>
     <!-- Used in itemdescription -->
     <attr name="non_transparent_background" format="reference"/>
     <attr name="overlay_background" format="color"/>
