--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -39,6 +39,8 @@
         <item name="attr/overlay_background">@color/overlay_light</item>
         <item name="attr/spinner_button">@drawable/spinner_button</item>
         <item name="attr/overlay_drawable">@drawable/overlay_drawable</item>
+        <item name="attr/sleeptimer_drawable">@drawable/sleep_timer_drawable</item>
+
     </style>
 
     <style name="Theme.AntennaPod.Dark" parent="@style/Theme.AppCompat">
@@ -74,6 +76,7 @@
         <item name="attr/overlay_background">@color/overlay_dark</item>
         <item name="attr/spinner_button">@drawable/spinner_button_dark</item>
         <item name="attr/overlay_drawable">@drawable/overlay_drawable_dark</item>
+        <item name="attr/sleeptimer_drawable">@drawable/sleep_timer_drawable_dark</item>
     </style>
 
     <style name="UndoBar">
